[Fix] prevent `SplitView` re-layout when the `NavigationPanel` is collapsed

--- a/src/workbench/parts/workspace/workspace.scss
+++ b/src/workbench/parts/workspace/workspace.scss
@@ -1,3 +1,3 @@
 #workspace {
-    background-color: white;
+    background-color: rgb(214, 19, 19);
 }
